# size-scanner

./: .gitignore  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
store-msix/layout/: AppxManifest.xml
